test/expected/explain_rrrr.out
explain int&& &&r
           ^
12: error: rvalue reference not supported in C
